cmake_minimum_required(VERSION 3.10)
project(ccia CXX)
set(CMAKE_CXX_STANDARD 11)
find_package(Threads REQUIRED)
add_executable(demo demo.cpp)
target_link_libraries(demo PRIVATE Threads::Threads)

add_subdirectory(listings_01)
add_subdirectory(listings_02)
add_subdirectory(listings_03)
add_subdirectory(listings_04)
add_subdirectory(listings_05)
add_subdirectory(listings_06)
add_subdirectory(listings_07)
add_subdirectory(listings_08)
add_subdirectory(listings_09)
add_subdirectory(listings_10)
add_subdirectory(listings_11)
add_subdirectory(a)
add_subdirectory(c)