add_executable(listings_2.1 listing_2.1.cpp)
target_link_libraries(listings_2.1 PRIVATE Threads::Threads)

add_executable(listings_2.2 listing_2.2.cpp)
target_link_libraries(listings_2.2 PRIVATE Threads::Threads)

add_executable(listings_2.5 listing_2.5.cpp)
target_link_libraries(listings_2.5 PRIVATE Threads::Threads)

add_executable(listings_2.6 listing_2.6.cpp)
target_link_libraries(listings_2.6 PRIVATE Threads::Threads)

add_executable(listings_2.7 listing_2.7.cpp)
target_link_libraries(listings_2.7 PRIVATE Threads::Threads)

add_executable(listings_2.8 listing_2.8.cpp)
target_link_libraries(listings_2.8 PRIVATE Threads::Threads)